--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>转蛋优化版</title>
     <meta lang="zh-cmn-Hans" charset="utf-8">
     <meta name="author" content="Aero Wang">
-    <script>
+    <!--<script>
     if (/Android|webOS|iPhone|iPad|iPod|BlackBerry|BB|PlayBook|IEMobile|Windows Phone|Kindle|Silk|Opera Mini/i.test(navigator.userAgent)) {
       var meta = document.createElement('meta');
       meta.httpEquiv = "viewport";
@@ -16,7 +16,8 @@
       meta.content = "initial-scale=1, maximum-scale=1, user-scalable=no";
       document.getElementsByTagName('head')[0].appendChild(meta);
     }
-    </script>
+    </script>-->
+    <meta http-equiv="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta content="telephone=no" name="format-detection"/>
     <meta content="email=no" name="format-detection"/>
     <meta name="apple-touch-fullscreen" content="NO">
