--- a/index.html
+++ b/index.html
@@ -28,5 +28,15 @@
       <canvas id="spinegg" width="640" height="1010"></canvas>
     </div>
   </body>
+  <div style="display:none">
+    <img src="img/1.png"></img>
+    <img src="img/2.png"></img>
+    <img src="img/3.png"></img>
+    <img src="img/1.1.png"></img>
+    <img src="img/2.1.png"></img>
+    <img src="img/3.1.png"></img>
+    <img src="img/halo.png"></img>
+    <img src="img/hammer.png"></img>
+  </div>
   <script src="js/script.js"></script>
 </html>
